# doordash-duration-prediction

./: Dockerfile  Makefile  README.md  docker-compose.yaml  feature_importance.npy  hello.py  mlflow.db  pyproject.toml  requirements.text  requirements.txt  ridge_coefficients.npy  start.sh
.github/workflows/: cd-deploy-workflow.yaml
infrastructure/: .terraform.lock.hcl  main.tf  variables.tf
infrastructure/modules/ecr/: main.tf
infrastructure/modules/s3/: main.tf
model_artifacts/models:_doordash_best_model_4/: MLmodel  conda.yaml  model.pkl  python_env.yaml  registered_model_meta  requirements.txt
src/: hpo.py  register_model.py  score_batch.py  test_s3.py  train.py  upload_s3.py
