[project]
name = "doordash-duration-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.36.1",
    "evidently",
    "hyperopt>=0.2.7",
    "isort>=5.13.2",
    "kaggle>=1.6.14",
    "matplotlib>=3.10.0",
    "mlflow>=2.19.0",
    "nltk>=3.9.1",
    "notebook>=7.3.2",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "prefect>=3.1.12",
    "psycopg",
    "psycopg-binary>=3.2.4",
    "pyarrow>=18.1.0",
    "pylint>=3.3.3",
    "pytest>=8.3.4",
    "scikit-learn>=1.6",
    "watchdog>=6.0.0",
    "xgboost>=2.1.3",
]
